--- a/templates/submit_item_result.html
+++ b/templates/submit_item_result.html
@@ -15,6 +15,7 @@
     used!
     {% endif %}
 </p>
+<img src="{{img_path}}"/>
 <p>
     Contact via {{data.email}} or {{data.phone}} 
     if you are interested!
