--- a/templates/reg_items.html
+++ b/templates/reg_items.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %}
 
 {% block section %}
-<form action="/submit_item" method="get">
+<form action="/submit_item_post" method="post" enctype="multipart/form-data">
     <div><br><br>
         <label for="name">Item name: </label>
         <input type="text" name="name" id="name" required><br><br>
@@ -50,8 +50,13 @@
     <div>
         <label for="phone">Phone : </label>
         <input type="text" name="phone" id="phone"><br><br>
+        <div>
+            <label for="img">Representative Image upload : </label>
+            <input type="file" name="file" /><br><br>
+        </div>
         <input type="submit" value="Submit!"><br><br>
     </div>
+    
 </form>
 
 {% endblock section %}
